# ai-video-preproduction-agent

./: .env.example  .env.hosted.example  .gitignore  AGENTS.md  FOUNDATION.md  Makefile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  tsconfig.json
docs/adr/: ADR-001-modular-monolith.md  ADR-002-monorepo.md  ADR-003-web-api-worker-separation.md  ADR-004-structured-video-production-schema.md  ADR-005-provider-adapters.md  ADR-006-versioning-and-audit.md  ADR-007-background-jobs.md  ADR-008-tenant-aware-foundation.md  ADR-009-cross-language-contracts.md  ADR-010-no-browser-provider-calls.md  ADR-011-engineering-skeleton-toolchain.md  ADR-012-postgresql-persistence-and-migrations.md  ADR-013-tenant-ownership-and-isolation.md  ADR-014-repositories-and-transactions.md  ADR-015-project-lifecycle-and-concurrency.md  ADR-016-immutable-audit-events.md  ADR-017-brief-aggregate-and-immutable-versions.md  ADR-018-structured-video-brief-schema.md  ADR-019-brief-review-approval-and-issues.md  ADR-020-brief-pointer-and-concurrency.md  ADR-021-brief-audit-and-provenance.md  ADR-022-structured-brief-ingestion-boundary.md  ADR-023-ingestion-idempotency-and-duplicate-handling.md  ADR-024-deterministic-normalization-and-provenance.md  ADR-025-ingestion-outcome-and-rejection-model.md  ADR-026-ingestion-transaction-and-audit-boundaries.md  ADR-027-source-asset-aggregate-and-immutable-versions.md  (+38 more)
infra/docker/: Caddyfile  (+5 more)
scripts/: run-with-node.sh
services/: __init__.py
(+204 files in other folders)
